# slop

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: pages.yml  rust.yml
app/: Cargo.toml  Makefile  Trunk.toml  index.html  package.json  pnpm-lock.yaml
app/api/: package.json  pnpm-lock.yaml
app/api/src/: api.ts
app/api/src/__generated__/: definition.js  definition.mjs
app/schema/: book_entry.gql  book_entry.json  composite.json  menu.json  profile.gql  recipe.gql  recipe.json  runtime-composite.json
app/src/: add_to_book.rs  api.rs  api_context.rs  app.rs  book.rs  discover.rs  edit_recipe.rs  main.rs  menu_context.rs  my_recipes.rs  new_recipe.rs  pagination.rs  recipe.rs  recipe_link.rs  settings.rs  slop.rs
app/static/: print.css  slop.css  style.scss
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
lsp/: Cargo.toml
lsp/src/: main.rs
slop/: Cargo.toml
slop/src/: ast.rs  format.rs  lib.rs  menu.rs  parser.lalrpop  parser.rs  parser_test.rs  quant.rs  semantic.rs  stack_parser.rs  svg.rs
slop/tests/: all.rs
slop/tests/recipes/: binary.slop  binary_plus_nested.slop  carrot_pudding.slop  cookies.slop  ingredient_fractional_quantity.slop  keiserschmarrn.slop  missing_operands_2.slop  souffle.slop  title.slop  title_preamble.slop  unused_operands.slop
slop/tests/recipes/expected/: binary.compile  binary.parse  binary_1.compile  binary_1.fmt  binary_1.parse  binary_long_lines.compile  binary_long_lines.fmt  binary_long_lines.parse  binary_plus.compile  binary_plus.fmt  binary_plus.parse  binary_plus_nested.compile  binary_plus_nested.parse  carrot_pudding.compile  carrot_pudding.parse  cookies.compile  cookies.parse  hauloumi.compile  hauloumi.fmt  hauloumi.parse  ingredient.compile  ingredient.fmt  ingredient.parse  ingredient_derived.compile  ingredient_derived.fmt  ingredient_derived.parse  ingredient_derived_no_quantities.compile  ingredient_derived_no_quantities.fmt  ingredient_derived_no_quantities.fmt.errors  ingredient_derived_no_quantities.parse  ingredient_fractional_quantity.compile  ingredient_fractional_quantity.parse  keiserschmarrn.compile  keiserschmarrn.parse  missing_operands.compile  missing_operands.fmt  missing_operands.fmt.errors  missing_operands.parse  missing_operands.svg.errors  missing_operands_1.compile  (+33 more)
slop_app/: Cargo.toml  Makefile  Trunk.toml  package-lock.json  package.json
slop_app/api/: package-lock.json
slop_app/schema/: book_entry.gql  build.sh  composite.json  menu.gql  profile.json  runtime-composite.json
slop_app/src/: api.rs  api_context.rs  app.rs  book.rs  discover.rs  main.rs  menu.rs  menu_context.rs  my_recipes.rs  recipe.rs  settings.rs  slop.rs
slop_app/static/: slop.css
slop_lsp/: Cargo.toml
slop_server/: package-lock.json  package.json
src/: ast.rs  format.rs  lib.rs  main.rs  menu.rs  parser.lalrpop  parser.rs  parser_test.rs  quant.rs  rcp.lalrpop  rp.lalrpop  rp_test.rs  semantic.rs  slop_test.rs  svg.rs
src/lsp/: backend.rs  main.rs
src/trough/: main.rs
templates/: base.html.tera  create_menu.html.tera  ingredients.html.tera  menu.html.tera  preview_menu.html.tera  recipe-index.html.tera
