
[package]
name = "slop-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "slop"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
slop.workspace = true
tokio = { version = "1.32.0", features = ["rt-multi-thread", "fs", "macros", "io-util"] }
