[package]
name = "slop"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true


[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }

[dependencies]
lalrpop-util = { version = "0.19", features = ["lexer"] }
svg = "0.12.1"
measurements = "0.11"
anyhow = "1.0"

[dev-dependencies]
expect-test = "1.4.0"
