[package]
name = "slop_app"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.69"
gloo = { version = "0.8", features = ["futures"] }
gloo-console = "0.2.3"
gloo-storage = "0.3.0"
gloo-utils = { version = "0.1.6", features = ["serde"] }
js-sys = "0.3.61"
log = "0.4.17"
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew.git" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
slop.workspace = true
thiserror = "1.0.38"
wasm-bindgen = "=0.2.87"                                                 # This version must exactly match the version is Trunk.toml
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
yew-nested-router = "0.3"
