[package]
name = "slop_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.9.5"
codespan-lsp = "0.10.1"
lsp-types = "0.79.0"
lalrpop-util = {version = "0.19", features = ["lexer"] }
regex = "1"
svg = "0.12.1"
rocket = "0.5.0-rc.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-lsp = "0.13.3"
tokio = { version = "0.2", features = ["full"] }
simplelog = "^0.7.6"
log ="0.4.11"
log-panics = "2.0.0"
measurements = "0.11"
anyhow ="1.0"
clap = { version = "3.2.21", features = ["derive"] }
rand = "0.8.5"
url = "2.3.1"
http = "0.2.8"
strum = {version = "0.24.1", features = ["derive"]}
strum_macros = "0.24.3"
expect-test = "1.4.0"

